--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /projects/unix/_obj*/
 /projects/unix/mupen64plus-audio-sdl*.so
-projects/unix/mupen64plus-audio-sdl.js
+projects/unix/mupen64plus-audio-sdl*.js
